# linearmpc_panda

./: .gitmodules  CMakeLists.txt  README.md  controller_plugins.xml  free_flight_test_h.csv  free_flight_test_q.csv  free_flight_test_qvu.npy  free_flight_test_u.csv  free_flight_test_v.csv  joint_states_06.csv  joint_states_08.csv  joint_states_09.csv  joint_states_15.csv  joint_states_16.csv  joint_states_18.csv  joint_states_19.csv  joint_states_20.csv  joint_states_21.csv  joint_states_trial4.csv  joint_states_trial5.csv  package.xml  test1_N60_Euler_hlow0.07_h.csv  test1_N60_Euler_hlow0.07_q.csv  test1_N60_Euler_hlow0.07_u.csv  test1_N60_Euler_hlow0.07_v.csv  test2_N60_Euler_hlow0.04_dtheta2.0_h.csv  test2_N60_Euler_hlow0.04_dtheta2.0_q.csv  test2_N60_Euler_hlow0.04_dtheta2.0_u.csv  test2_N60_Euler_hlow0.04_dtheta2.0_v.csv  test3_N60_Euler_hlow0.03_dtheta1.0_v.csv  test3_N60_Euler_hlow0.03_h.csv  test3_N60_Euler_hlow0.03_u.csv  tutorial_from_gpt.md  tutorial_intellisense4drake_using_compile_command.json.md
0_real_exp_data_and_log/2nd_try_data_N60_Simpson/: t2_joint_states.csv
0_real_exp_data_and_log/2nd_try_data_N60_Simpson/obj_poses/: t10_init.csv  t11_end.csv  t13_init.csv  t15_end.csv  t1_end.csv  t2_init.csv  t3_init.csv  t4_end.csv  t5_end.csv  t6_init.csv  t7_end.csv  t7_init.csv  t8_init.csv  t9_end.csv
0_real_exp_data_and_log/real_exp/1/: test3_N60_Euler_hlow0.03_q.csv
0_real_exp_data_and_log/real_exp/3/: traj_N20_hlow0.07_euler_q.csv  traj_N20_hlow0.07_euler_v.csv
0_real_exp_data_and_log/real_exp/4/: traj_N20_hlow0.07_simpson_h.csv  traj_N20_hlow0.07_simpson_u.csv
0_real_exp_data_and_log/real_exp_data_logging/new_N60_Euler_task_data/: t01_init.csv  t02_end.csv  t02_init.csv  t03_end.csv  t03_init.csv  t05_init.csv  t06_end.csv  t07_end.csv  t07_init.csv  t08_end.csv  t08_init.csv  t09_init.csv
0_real_exp_data_and_log/some_joint_log/: joint_states_010.csv  joint_states_011.csv  joint_states_012.csv  joint_states_07.csv  joint_states_14.csv  joint_states_17.csv
0_real_exp_data_and_log/test_N60_hlow0.04/dtheta1.0/: traj.npy
2nd_try_data_N60_Simpson/: t1_joint_states.csv  t3_joint_states.csv  t4_joint_states.csv  t5_joint_states.csv
2nd_try_data_N60_Simpson/obj_poses/: t10_end.csv  t11_init.csv  t12_end.csv  t12_init.csv  t13_end.csv  t14_end.csv  t14_init.csv  t15_init.csv  t16_end.csv  t16_init.csv  t1_init.csv  t2_end.csv  t3_end.csv  t4_init.csv  t5_init.csv  t6_end.csv  t8_end.csv  t9_init.csv
config/: init_poses.yaml  linearmpc_controller.yaml  linearmpc_controller_params.yaml
include/: controllers.h  mpc_executor_node.h  mpc_solver_node.h  myutils.h  panda_QP_controller.h  panda_inverse_dynamics_controller.h  panda_torque_PD_controller.h
include/linearmpc_panda/: drake_state_publisher.h  fake_state_publisher.h  linear_mpc_prob.h  linearmpc_controller.h  mpc_executor_node.h  mpc_ref_updater_node.h  mpc_solver_node.h  myutils.h  panda_QP_controller.h  panda_inverse_dynamics_controller.h  panda_mpc_torque_controller.h
launch/: linearmpc_controller.launch  linearmpc_controller_gz.launch  linearmpc_controller_hw.launch  linearmpc_panda.launch  load_linearmpc_controller.launch  move_to_pose.launch  panda_launch.launch  realsense.launch  run_experiment.launch  synced_launch.launch
msg/: DesiredState.msg  DesiredTorqueState.msg
paper_data/panda_inverse_dynamics_controller_Start_at_0/0/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0/1/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0/2/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0/3/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0/4/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0_low_pass_acceleration/0/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0_low_pass_acceleration/1/: summary.yaml  trajectory.csv
paper_data/panda_inverse_dynamics_controller_Start_at_0_low_pass_acceleration/2/: summary.yaml  trajectory.csv
real_exp/2/: acceleration_traj_N60_hlow0.03_simpson.csv  traj_N60_hlow0.03_simpson_a.csv  traj_N60_hlow0.03_simpson_h.csv  traj_N60_hlow0.03_simpson_q.csv  traj_N60_hlow0.03_simpson_u.csv  traj_N60_hlow0.03_simpson_v.csv
real_exp/3/: traj_N20_hlow0.07_euler_h.csv  traj_N20_hlow0.07_euler_u.csv
real_exp/4/: acceleration_traj_N20_hlow0.07_simpson.csv  traj_N20_hlow0.07_simpson_a.csv  traj_N20_hlow0.07_simpson_h.csv  traj_N20_hlow0.07_simpson_q.csv  traj_N20_hlow0.07_simpson_u.csv  traj_N20_hlow0.07_simpson_v.csv
real_exp_data_logging/exp_10_data/: end01.csv  end02.csv  end03.csv  end06.csv  end09.csv  end10.csv  end11.csv  init03.csv  init05.csv  init07.csv  init08.csv  init09.csv  init10.csv  joint_states01.csv  joint_states03.csv  joint_states05.csv
real_exp_data_logging/exp_11.5_data/: end05.csv  init06.csv  init11.csv
real_exp_data_logging/new_N60_Euler_task_data/: t01_end.csv  t04_end.csv  t04_init.csv  t05_end.csv  t06_init.csv  t09_end.csv  t10_end.csv  t10_init.csv
scripts/: evaluate_all.py  run_experiment.sh  run_performance.py  temp.py
src/: controllers.cc  drake_state_publisher.cc  fake_joint_state_publisher.cc  fake_state_publisher.cc  fake_u_cmd_debug.cc  joint_state_logger_node.cc  linear_mpc_prob.cc  linearmpc_controller.cc  load_traj_for_tracking_ws.cc  move_to_pose.cc  move_to_pose_service.cc  mpc_executor_node.cc  mpc_ref_updater_node.cc  mpc_solver_node.cc  mpc_solver_node_main.cc  myutils.cc  optitrack_pose_logger_node.cc  panda_QP_controller.cpp  panda_inverse_dynamics_controller.cpp  panda_mpc_torque_controller.cc  panda_torque_PD_controller.cpp  save_traj_to_file.cc  upsampled_ucmd_sub_test.cc  x_init_desired_node.cc
srv/: SetJointPosition.srv
test_N60_hlow0.04/dtheta1.0/: specs.json
vids/extra_case6_vids_only_with_maxing/: case6_v1_maxing_pose_end.csv  case6_v1_maxing_pose_init.csv  case6_v2_maxing_pose_end.csv  case6_v2_maxing_pose_init.csv
(+327 files in other folders)
